[package]
name = "grafeo-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bindings for Grafeo graph database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grafeo-engine = { workspace = true, features = ["gql"] }
grafeo-common.workspace = true
grafeo-bindings-common = { path = "../common", default-features = false }

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Better panic messages in browser console
console_error_panic_hook = "0.1"

# Serialization (for snapshot export/import)
serde.workspace = true
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["gql"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]
vector-index = ["grafeo-engine/vector-index"]
full = ["languages", "text-index", "hybrid-search", "vector-index"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[lints]
workspace = true
