[package]
name = "grafeo-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bindings for Grafeo graph database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grafeo-engine = { workspace = true, features = ["gql", "regex-lite"] }
grafeo-core = { workspace = true, default-features = false, optional = true }
grafeo-common.workspace = true
grafeo-bindings-common = { path = "../common", default-features = false }

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Better panic messages in browser console
console_error_panic_hook = "0.1"

# Serialization (for snapshot export/import)
serde.workspace = true
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["browser"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
rdf = ["grafeo-engine/rdf", "dep:grafeo-core", "grafeo-core/rdf"]
sparql = ["grafeo-engine/sparql", "rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]
ai = ["vector-index", "text-index", "hybrid-search"]
# Named profiles
browser = ["gql", "grafeo-engine/regex-lite"]  # GQL + regex-lite (~507 KB gzip)
full = ["languages", "ai"]  # All languages + AI search

[lints]
workspace = true
